<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="5dip"
              android:background="@drawable/bg">

   <TextView android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             style="@style/bold"
             android:text="@string/new_column_name"/>
   <EditText android:id="@+id/body"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>


   <TextView android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             style="@style/bold"
             android:text="@string/new_column_after_column"/>
   <Spinner android:id="@+id/after_column"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

   <TextView android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             style="@style/bold"
             android:text="@string/new_column_capacity"/>
   <Spinner android:id="@+id/capacity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/column_capacities"/>

   <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:layout_gravity="center">
      <Button android:id="@+id/create_new_column_btn"
              style="@style/dialog_create_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/create"/>
      <Button android:id="@+id/cancel_btn"
              style="@style/dialog_cancel_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/cancel"/>
   </LinearLayout>
</LinearLayout>