<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="@drawable/bg">

   <TextView
         android:text="@string/form_task_title"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:padding="3dip"
         />
   <EditText android:id="@+id/task_title"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:singleLine="true"
             android:padding="3dip"
         />


   <TextView
         android:text="@string/form_task_type"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:padding="3dip"
         android:gravity="center"/>
   <Spinner android:id="@+id/task_type"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
         />


   <TextView
         android:text="@string/form_task_description"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:padding="3dip"
         />
   <EditText android:id="@+id/task_description"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:lines="3"
         />


   <View
         android:layout_width="fill_parent"
         android:layout_height="2dip"
         android:background="#FF909090"/>


   <include layout="@layout/create_cancel_buttons"/>
</LinearLayout>
